# emu8051_bapframes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  core.c  disasm.c  emu.c  emu8051.h  emulator.h  logicboard.c  mainview.c  memeditor.c  opcodes.c  options.c  popups.c  trace.cpp  trace.h
libtrace/: CMakeLists.txt  trace.cpp  trace.h
